vlib/v/checker/tests/bit_op_wrong_left_type_err.out
vlib/v/checker/tests/bit_op_wrong_left_type_err.v:2:2: error: left type of `&` cannot be non-integer type f64
    1 | fn main() {
    2 |     0.5 & 1
      |     ~~~
    3 | }
